Write more swagger doc to the api
